--- a/src/main/resources/static/user/policies/allPolicy.html
+++ b/src/main/resources/static/user/policies/allPolicy.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="allPolicyStyle.css">
     <title>All Policies</title>
 </head>
 <body>
-  <form>
+<h1>Policies</h1>
     <div id="policies-container"></div>
-  </form>
   <script src="allPolicyScript.js"></script>
 </body>
 </html>
